@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.2 2002/12/31 15:44:29 jlam Exp $
+# $NetBSD: Makefile,v 1.3 2003/01/28 08:36:58 jlam Exp $
 #
 
-DISTNAME=	cgoban-unix-2.4.55
+DISTNAME=	cgoban-unix-2.4.57
 PKGNAME=	${DISTNAME:S/unix/java/}
 WRKSRC=		${WRKDIR}/cgoban
 CATEGORIES=	games
@@ -10,10 +10,11 @@ EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	packages@netbsd.org
 HOMEPAGE=	http://kgs.kiseido.com/en_US/download.html
-COMMENT=	Java Go server client and sgf viewer/editor
+COMMENT=	Java Go server client and SGF viewer/editor
 
-NO_BUILD=	YES
-USE_BUILDLINK2=	YES
+NO_BUILD=	yes
+USE_BUILDLINK2=	yes
+USE_JAVA2=	yes
 USE_JAVA=	run
 
 do-configure:
